# ChangeLog for net-misc/rsync
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/rsync/ChangeLog,v 1.256 2014/12/18 21:44:39 mr_bones_ Exp $

  18 Dec 2014; Michael Sterrett <mr_bones_@gentoo.org>
  files/rsyncd.conf-3.0.9-r1:
  default to /run instead of /var/run for bug #332633

*rsync-3.1.1 (07 Jul 2014)

  07 Jul 2014; Lars Wendler <polynomial-c@gentoo.org> -rsync-3.1.1_pre2.ebuild,
  +rsync-3.1.1.ebuild:
  Version bump. Removed old.

  27 May 2014; Lars Wendler <polynomial-c@gentoo.org> rsync-3.1.1_pre2.ebuild:
  rsync-3.1.1_pre2 no longer needs the patch from 3.1.0.

  27 May 2014; Lars Wendler <polynomial-c@gentoo.org> -files/rsyncd.conf,
  -files/rsyncd.init.d, -files/rsyncd.xinetd:
  Removed old files from FILESDIR as well.

*rsync-3.1.1_pre2 (27 May 2014)

  27 May 2014; Lars Wendler <polynomial-c@gentoo.org> -rsync-3.0.8.ebuild,
  -rsync-3.0.9.ebuild, -rsync-3.0.9-r2.ebuild, +rsync-3.1.1_pre2.ebuild:
  Added pre-version without KEYWORDS. Removed old.

*rsync-3.1.0-r1 (15 Apr 2014)

  15 Apr 2014; Lars Wendler <polynomial-c@gentoo.org> -rsync-3.1.0.ebuild,
  +rsync-3.1.0-r1.ebuild,
  +files/rsync-3.1.1_pre1-avoid_infinite_wait_reading_secrets_file.patch:
  Security bump (bug #507698). Removed vulnerable version

  06 Apr 2014; Mike Frysinger <vapier@gentoo.org> rsync-3.0.9-r3.ebuild:
  Mark m68k/s390/sh stable.

  18 Jan 2014; Mike Frysinger <vapier@gentoo.org> rsync-3.0.9-r3.ebuild,
  rsync-3.1.0.ebuild:
  Add arm64 love.

*rsync-3.1.0 (10 Oct 2013)

  10 Oct 2013; Tony Vroon <chainsaw@gentoo.org> +rsync-3.1.0.ebuild:
  Version bump, as requested by Lars Polynomial-C Wendler in bug #486634.
  Introduces protocol 31 and option passing to the remote daemon.
  Human-readable sizes can now be expressed in terabytes.

  23 Sep 2013; Agostino Sarubbo <ago@gentoo.org> rsync-3.0.9-r3.ebuild:
  Stable for sparc, wrt bug #480090

  14 Sep 2013; Agostino Sarubbo <ago@gentoo.org> rsync-3.0.9-r3.ebuild: