@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX rsync-3.1.1_pre1-avoid_infinite_wait_reading_secrets_file.patch 2252 SHA256 6e57c9efc7c22bb9ce006ef3218b04653e5912bb9a86ed10eb58d9035ce3fcca SHA512 5bdc8db0ce898bce7b55630fea47943162c606b0255abd7362f1c2f6200febe55ba37627e33f245d3c0cb0b8f12faaa497108e8d51b81c62ac15cfe5a35add98 WHIRLPOOL da8a800bcda725b74181dba3fb3480e9e9c3b0e810332491963358571a0d2e912c1682b6548b679001e806c86a21e7b839099669c43417576a9b70d914ceb984
 AUX rsyncd.conf-3.0.9-r1 449 SHA256 e3da1a057081b9089dede95873d6f413d63870fea67246081a6a90725cfd098b SHA512 8d51b452be88820c38639aa833490a001abc2edba03133441000634c2ec090d243598b0932fc11abdf1286afdab02eb6532df2b28a48bfde781c3a8b61fe8c6f WHIRLPOOL ae2b5dc507362ebc10a27973ac8e74b9983da50abbcb3ab33324da76ec70fe30c1cb49d1f7103c7b752d7cf6732a4bf8112c1763f2e9b9da669178925198716c
 AUX rsyncd.conf.d 149 SHA256 de758791b16b89a648c01867af7f51bc9bd44e40cbe868e439b753ff5d9572e5 SHA512 8ea9a2f1fea508fa132313fa16513eac84a9ed3ce75741c42769b56bbcd3f1bd2eb8bfdfe40a6c7f619e4281e8fc8d95d1bd84096d0b64aaacf606cd614ae5b3 WHIRLPOOL ac5098df8772c66d4d8070fbefe0194d8c44345d14a547f2cd59737f2dcb2023b59285117b07bbc2d711302f7736dd761d5e5498913c1878c3512d9fb5d5e36e
@@ -10,6 +13,13 @@ DIST rsync-3.1.0.tar.gz 883901 SHA256 81ca23f77fc9b957eb9845a6024f41af0ff0c619b7
 DIST rsync-3.1.1.tar.gz 890124 SHA256 7de4364fcf5fe42f3bdb514417f1c40d10bbca896abe7e7f2c581c6ea08a2621 SHA512 ec0e46ff532a09a711282aaa822f5f1c133593ee6c1c474acd67284619236e6a202f0f369d3e67a95ceb3a3b1c39ea7fb609d6d6fb950f3be6e0f6372e903e21 WHIRLPOOL 0622646c10a0b4553fddbc0c3c48e6a87f78eaa56dc0cc0f0db86ed45e2c6572d23e4c379fae50ced012c2c0e75a364cae55f7c49f88918a9d62fb9ae17805b9
 EBUILD rsync-3.0.9-r3.ebuild 2469 SHA256 ed7cfc877810969a2169e7277bed66f9de8971a9f54a4eb5dfb6b2cfe6be59c1 SHA512 40992a3c9ed97fdebf6c4f45359a49e46e98a958f8d27c3f5d93d09c3f906b36afe5efe70945cef546a2803238b5674445d14a84ec3fb7c4c142e7b95a619cbc WHIRLPOOL b2a921cad10f0ac6e47b365addf1d91ed2d3670122ed09478ffd4333147195e4444cc85a81c065d416003e4f1b431d92ab433dced72fa01df0b1e1a5e7f71a40
 EBUILD rsync-3.1.0-r1.ebuild 2573 SHA256 9541a2dfacfefac6baf5946a90b3c4a54780f9c72063a3d1b72b5c21f50e803f SHA512 6f2a748250343259cc740649c4414e718c8e591b094cddef0131dcd52fcf437979f99f6744f3f3bd86913cd85cd725dd05584ce007296293ddd8b5afc1e1c599 WHIRLPOOL 11c3ad6e5f458d42f5b5e7da7dec26f112b3394554f287bbf5f986fc029783a938191e67e5772f9737f4ca82ed1a1a9b32a3472b7b5f059cba4d7ace36c1a97b
-EBUILD rsync-3.1.1.ebuild 2603 SHA256 6fe43bab00903eb79d8f781226ee4c85c6ad784c826c5139a211481a71d7e165 SHA512 841cc76c85b926fc3831bbcca20f84f7379bca11f845157a43514aa846db2b71628db47de84e3fb79cf0dbf7ef23c42097532de6f4a79bc817f358596029e3a6 WHIRLPOOL c6ec6d0875d2e1c9cf668607fe04c262f24ee2e6b9be16aa2593c7d45f83c4000fe96e9b070257ab51e3c3ca04e36b99ab5f64f10dbc1c5388f610f2fd78fbd5
-MISC ChangeLog 32930 SHA256 065d9572c8b69f6815c8de13fa013a46c9974ec7cfdeeeff049ff2afe1e2f1fd SHA512 238fc293d9bdf90054bef0caef0eb103b2c671364699d5ead09806f264332caa9cb0d2299b8c7aa335958ec2613db8203f62f2fbd6a2a82e4c7be72ca7db21fb WHIRLPOOL 42678829bb2707d6ec48e293dbf09ad3bc8479779c373979597a1c7755653e80adb5baada9f737a1d10249914d0fcfb98a64a96eb26228984c21f2386900e0cb
+EBUILD rsync-3.1.1.ebuild 2597 SHA256 b8c77b50240ffc760e277f541818f80bce5c11b0c66effff6d0510c23f9362c7 SHA512 ce7db2e9ae4cf644464fae27003824c4e3c5bc769467c994f548e3c5b05e4d675a42143cd107e4113169d14aed6b8c5ca3407f0ce9a97e617a3947d62654ae61 WHIRLPOOL d6550178788f7e3e7a322816d8735f8493e958e74643d2d6ea2438a00080455b484fe8b3648d0341be79f513546f3890aed8c4ef453b9b75f8c0f0923d6f4d59
+MISC ChangeLog 33025 SHA256 7656089f09c4fa43d07bc022336a6c9e30db585ec3da485afa16df28a21e85c4 SHA512 4f6b62796d71f3a0de964a7abc4365588d8729e81d973bc686acdb26d76c9a8334ae59ddfc6b1fab3f67c7c8a5f20b9bb3dacb47a1288042cfb078892b901ac1 WHIRLPOOL d05d1b410a0b11463231ddf8a663d50c34e4e33a16bb1536901b70fc099ac5353e3dc218981faadf2ebc5a60171595f18a22c35987381ee38eb8d2ff54ed1472
 MISC metadata.xml 164 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92 SHA512 8eb0d5153d388f6ea069c64b93882244816a0a09aecc0d73cb872121ce0eb24c5ccafa96aad0b620b2300f319e1af101fa7fa6c5d0d561719d49bb07da0a2eca WHIRLPOOL 11a1441bddb7a6c69653c663902b7da5767ae6ad515ac2aabfc42fe37927a1ccc21472deeee454009ff720201a41c3e4a912df42661a0a87150fb46126da2d52
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iEYEAREIAAYFAlTfGqsACgkQVWmRsqeSphMUDQCaA+4J9KAN848RtUUzk3XWEgKt
+ElIAn1GKgkhqSMZ/GMeINYr28UuHMo1p
+=THrk
+-----END PGP SIGNATURE-----
